# dispatch-router

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
proto/: dispatch.proto
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/grpc/: mod.rs
src/api/rest/: couriers.rs  mod.rs  orders.rs  ws.rs
src/engine/: assignment.rs  mod.rs  queue.rs  scoring.rs
src/geo/: mod.rs
src/models/: assignment.rs  courier.rs  order.rs
src/observability/: metrics.rs
static/: index.html
tests/: integration.rs
