[package]
name = "dispatch-router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.11"
prost = "0.12"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
prometheus = "0.13"
futures = "0.3"
dotenvy = "0.15"
tokio-stream = { version = "0.1.18", features = ["sync"] }

[build-dependencies]
tonic-build = "0.11"
